--- a/VKMusic/Base.lproj/Main_iPhone.storyboard
+++ b/VKMusic/Base.lproj/Main_iPhone.storyboard
@@ -51,7 +51,13 @@
                             <outlet property="delegate" destination="nvE-YV-Wx2" id="k1E-TV-oVb"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Моя музыка" id="Lce-M4-hnK"/>
+                    <navigationItem key="navigationItem" title="Моя музыка" id="Lce-M4-hnK">
+                        <barButtonItem key="leftBarButtonItem" title="Выйти" id="alc-MR-FW3">
+                            <connections>
+                                <action selector="logout:" destination="nvE-YV-Wx2" id="Rs6-5z-P9S"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
                     <connections>
                         <outlet property="searchDisplayController" destination="fqQ-9m-ivn" id="4lf-eV-j8X"/>
@@ -372,6 +378,7 @@
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yjd-vZ-U31">
                                 <rect key="frame" x="20" y="273" width="280" height="42"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <state key="normal" title="Войти">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -386,10 +393,10 @@
                                 <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Для дальнейшей работы Вам необходимо зарегистрироваться" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="280" translatesAutoresizingMaskIntoConstraints="NO" id="8QH-h5-9Lh">
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Для дальнейшей работы Вам необходимо авторизоваться в ВКонтакте" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="280" translatesAutoresizingMaskIntoConstraints="NO" id="8QH-h5-9Lh">
                                 <rect key="frame" x="20" y="212" width="280" height="53"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                 <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
